added more jfx